--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1> Odin Recipes</h1>
-        <a href="recipes/chicken-rice.html"> Chicken and Rice</a>
+        <ul> 
+        <li><a href="recipes/chicken-rice.html"> Chicken and Rice</a></li>
+        <li><a href="recipes/protein-shake.html"> Protein Shake</a></li>    
+        </ul>
     </body>
 </html>
