--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <h1> Odin Recipes</h1>
         <ul> 
         <li><a href="recipes/chicken-rice.html"> Chicken and Rice</a></li>
-        <li><a href="recipes/protein-shake.html"> Protein Shake</a></li>    
+        <li><a href="recipes/protein-shake.html"> Protein Shake</a></li>
+        <li><a href="recipes/chipotle-burrito.html"> Chipotle Burrito Bowl</a></li>    
         </ul>
     </body>
 </html>
